--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "rentscootscoot",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.4.0",
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.0.0",
+    "places.js": "^1.16.4",
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
